--- a/about.html
+++ b/about.html
@@ -239,9 +239,9 @@
         class="m-4 p-4 f4 color-shadow-small bg-gray-800-mktg rounded-2 signup-content-container"
       >
 
-      <h1 class="sr-only"><strong>Hier wirst du Serverdateien finden<strong></h1>
+      <h1 class="sr-only"><strong>Auf der About Seite wirst du Sachen über mich und andere dinge erfahren<strong></h1>
   <typing-effect
-        data-lines='["Hier wirst du Serverdateien finden"]'
+        data-lines='["Auf der About Seite wirst du ", "Sachen über mich und andere dinge erfahren"]'
         data-continue-to="link-container"
         class="js-signup-typed-welcome"
       >
